clusters/home/apps/mediabox/radarr/svc-radarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: mediabox
  labels:
    app: "mediabox"
    app.kubernetes.io/instance: "radarr"
    app.kubernetes.io/name: "radarr"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: radarr
      port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/component: server
